# kirigami-radio

./: CMakeLists.txt  README.md  org.kde.radio.desktop  org.kde.radio.json  org.kde.radio.metainfo.xml
android/: AndroidManifest.xml
src/: CMakeLists.txt  main.cpp  radioconfig.kcfgc
src/contents/ui/: About.qml  main.qml
